alignment fix

--- a/src/components/Render.css
+++ b/src/components/Render.css
@@ -4,7 +4,7 @@
     height: 100%;
     width: 100%;
     align-items:center;
-    padding: 10px;
+    padding: 5px;
     margin: 0px;
     display: flex;
     flex-direction: column;
